<?xml version="1.0"?>
<package format="2">
  <name>custom_messages_module</name>
  <version>0.0.0</version>
  <description>The custom_messages_module package</description>

  <maintainer email="renatosamperio@gmail.com">renato</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>gennodejs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gennodejs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
  </export>
</package>
